@@ -39,6 +39,7 @@
       <li>Item Two</li>
     </ul>
     <h1>h1's are cool</h1>
+    <h2>h2's are cool</h2>
   </div>
 </body>
 </html>
