@@ -3,9 +3,6 @@
     <title>Static Elements Page</title>
   </head>
   <body>
-    <h2>Static Elements Page</h2>
-
-
     <h3>Text Field</h3>
     <input id="text_field_id" name="text_field_name" class="text_field_class"
            size="40" type="text" />
@@ -92,7 +89,7 @@
     <input id=prompt_button type=button onclick="this.value = prompt('enter your name','John Doe')" value=Prompt>
 
     <h1 id="h1_id" class="h1_class" name="h1_name">h1's are cool</h1>
-    
+    <h2 id="h2_id" class="h2_class" name="h2_name">h2's are cool</h2>
     <h3>New Window</h3>
     <a href="success.html" target="_blank">New Window</a>
 
