@@ -96,4 +96,9 @@ describe "Element with nested elements" do
     element.h1_element
   end
 
+  it "should find a nested h2" do
+    expect(we).to receive(:h2).and_return(we)
+    element.h2_element
+  end
+
 end
